# server-function

./: Cargo.toml  expanded.rs  readme.md
src/: lib.rs
tests/: async_with_return_type.rs  async_without_args.rs  async_without_return_type.rs  messagepack.rs  tests.rs  with_return_type.rs  without_args.rs  without_return_type.rs
