[package]
name = "server-function"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "^1.0.47"
quote = "^1.0.21"
convert_case = "0.6.0"

[dev-dependencies]
serde = { version = "1.0.147", features = ["derive"] }
