[package]
name = "server-function"
version = "0.1.3"
edition = "2021"
description = "A macro for easy RPC creation"
license = "MIT"
repository = "https://github.com/r4nd0m1z3r/server-function"
homepage = "https://github.com/r4nd0m1z3r/server-function"

[lib]
proc_macro=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
messagepack = ["dep:rmp-serde"]

[dependencies]
proc-macro2 = "^1.0.47"
quote = "^1.0.21"
convert_case = "^0.6.0"

serde = { version = "1.0.147", features = ["derive"] }
rmp-serde = { version = "^1.1.1", optional = true }

[dev-dependencies]
async-std = "1.12.0"
